@@ -511,8 +511,9 @@ public class PacketMakerService {
 
 	boolean createPacket(String containerRootFolder, String regId, String dataFilePath, String type, String preregId,
 			String contextKey) throws Exception {
-		String packetRootFolder = getPacketRoot(getProcessRoot(containerRootFolder, contextKey), regId, type);
-		String templateFile = getIdJSONFileLocation(packetRootFolder);
+		Path packetRootFolder = resolvePacketRootFolder(
+				getPacketRoot(getProcessRoot(containerRootFolder, contextKey), regId, type), contextKey);
+		String templateFile = getIdJSONFileLocation(packetRootFolder.toString());
 		String process = VariableManager.getVariableValue(contextKey, "process").toString();
 		String centerId = VariableManager.getVariableValue(contextKey, "mosip.test.regclient.centerid").toString();
 		String officerId = null;
@@ -581,30 +582,30 @@ public class PacketMakerService {
 				return false;
 			}
 
-			updatePacketMetaInfo(packetRootFolder, METADATA, "registrationId", regId, true);
+			updatePacketMetaInfo(packetRootFolder.toString(), METADATA, "registrationId", regId, true);
 			if (preregId != null && !preregId.equalsIgnoreCase("0")) // newly added
 
-				updatePacketMetaInfo(packetRootFolder, METADATA, "preRegistrationId", preregId, true);
+				updatePacketMetaInfo(packetRootFolder.toString(), METADATA, "preRegistrationId", preregId, true);
 
 			String invalidDateValue = VariableManager
 					.getVariableValue(contextKey, "invalidDateFlag")
 					.toString();
 
 			if (invalidDateValue.equals("invalidCreationDate")) {
-				updatePacketMetaInfo(packetRootFolder, METADATA, "creationDate", null, true);
+				updatePacketMetaInfo(packetRootFolder.toString(), METADATA, "creationDate", null, true);
 			} else if (invalidDateValue.contains("CreationDate")) {
 				String offsetValue = invalidDateValue.split("=")[1];
 				String updatedDate = APIRequestUtil.getAdjustedUTCDate(offsetValue);
-				updatePacketMetaInfo(packetRootFolder, METADATA, "creationDate", updatedDate, true);
+				updatePacketMetaInfo(packetRootFolder.toString(), METADATA, "creationDate", updatedDate, true);
 			} else {
-				updatePacketMetaInfo(packetRootFolder, METADATA, "creationDate", APIRequestUtil.getUTCDateTime(null),
-						true);
+				updatePacketMetaInfo(packetRootFolder.toString(), METADATA, "creationDate",
+						APIRequestUtil.getUTCDateTime(null), true);
 			}
-			updatePacketMetaInfo(packetRootFolder, METADATA, "machineId", machineId, false);
-			updatePacketMetaInfo(packetRootFolder, METADATA, "centerId", centerId, false);
-			updatePacketMetaInfo(packetRootFolder, METADATA, "Registration Client Version Number",
+			updatePacketMetaInfo(packetRootFolder.toString(), METADATA, "machineId", machineId, false);
+			updatePacketMetaInfo(packetRootFolder.toString(), METADATA, "centerId", centerId, false);
+			updatePacketMetaInfo(packetRootFolder.toString(), METADATA, "Registration Client Version Number",
 					getRegistrationClientVersion(contextKey), false);
-			updatePacketMetaInfo(packetRootFolder, METADATA, "registrationType",
+			updatePacketMetaInfo(packetRootFolder.toString(), METADATA, "registrationType",
 					StringUtils.capitalize(process.toLowerCase()), false);
 
 			// ToRead Context file
@@ -622,7 +623,7 @@ public class PacketMakerService {
 
 			if (!VariableManager.getVariableValue(contextKey, "invalidOfficerIDFlag").toString()
 					.equals("invalidOfficerID")) {
-				updatePacketMetaInfo(packetRootFolder, OPERATIONSDATA, "officerId", officerId, false);
+				updatePacketMetaInfo(packetRootFolder.toString(), OPERATIONSDATA, "officerId", officerId, false);
 			}
 			supervisorId = p.getProperty(MOSIPTEST_REGCLIENT_SUPERVISORID);
 
@@ -630,7 +631,7 @@ public class PacketMakerService {
 					.equalsIgnoreCase("true"))
 				supervisorId = generateCaseConvertedString(supervisorId);
 
-			updatePacketMetaInfo(packetRootFolder, OPERATIONSDATA, "supervisorId", supervisorId, false);
+			updatePacketMetaInfo(packetRootFolder.toString(), OPERATIONSDATA, "supervisorId", supervisorId, false);
 
 			// officerP
 			officerP = p.getProperty(MOSIP_TEST_REGCLIENT_PASSWORD);
@@ -640,7 +641,7 @@ public class PacketMakerService {
 				officerP = "true"; // valid
 			else
 				officerP = FALSE; // null
-			updatePacketMetaInfo(packetRootFolder, OPERATIONSDATA, "officerPassword", officerP, false);
+			updatePacketMetaInfo(packetRootFolder.toString(), OPERATIONSDATA, "officerPassword", officerP, false);
 
 			// supervisorP
 			supervisorP = p.getProperty(MOSIP_TEST_REGCLIENT_supervisorP);
@@ -650,33 +651,33 @@ public class PacketMakerService {
 				supervisorP = "true"; // valid
 			else
 				supervisorP = FALSE; // null
-			updatePacketMetaInfo(packetRootFolder, OPERATIONSDATA, "supervisorPassword", supervisorP, false);
+			updatePacketMetaInfo(packetRootFolder.toString(), OPERATIONSDATA, "supervisorPassword", supervisorP, false);
 
 			// officerBiometricFileName
 			officerBiometricFileName = p.getProperty("mosip.test.regclient.officerBiometricFileName");
 			if (officerBiometricFileName != null && officerBiometricFileName.length() > 1) {
 			} else
 				officerBiometricFileName = null;
-			updatePacketMetaInfo(packetRootFolder, OPERATIONSDATA, "officerBiometricFileName", officerBiometricFileName,
-					false);
+			updatePacketMetaInfo(packetRootFolder.toString(), OPERATIONSDATA, "officerBiometricFileName",
+					officerBiometricFileName, false);
 
 			// supervisorBiometricFileName
 			supervisorBiometricFileName = p.getProperty("mosip.test.regclient.supervisorBiometricFileName");
 			if (supervisorBiometricFileName != null && supervisorBiometricFileName.length() > 1) {
 			} else
 				supervisorBiometricFileName = null;
-			updatePacketMetaInfo(packetRootFolder, OPERATIONSDATA, "supervisorBiometricFileName",
+			updatePacketMetaInfo(packetRootFolder.toString(), OPERATIONSDATA, "supervisorBiometricFileName",
 					supervisorBiometricFileName, false);
 
-			updateAudit(packetRootFolder, regId, contextKey);
+			updateAudit(packetRootFolder.toString(), regId, contextKey);
 
 			LinkedList<String> sequence = updateHashSequence1(packetRootFolder);
 			LinkedList<String> operations_seq = updateHashSequence2(packetRootFolder);
 			if (preregId != null && preregId.equals("01")) // to generte invalid hash data
 			{
-				CommonUtil.write(Path.of(packetRootFolder, PACKET_DATA_HASH_FILENAME),
+				CommonUtil.write(packetRootFolder.resolve(PACKET_DATA_HASH_FILENAME),
 						"PACKET_DATA_HASH_INVALID_DATA".getBytes());
-				CommonUtil.write(Path.of(packetRootFolder, PACKET_OPERATION_HASH_FILENAME),
+				CommonUtil.write(packetRootFolder.resolve(PACKET_OPERATION_HASH_FILENAME),
 						"PACKET_OPERATION_HASH_INVALID_DATA".getBytes());
 			} else {
 				updatePacketDataHash(packetRootFolder, sequence, PACKET_DATA_HASH_FILENAME, contextKey);
@@ -979,9 +980,9 @@ public class PacketMakerService {
 		return centerId + machineId + counter + currUTCTime;
 	}
 
-	private LinkedList<String> updateHashSequence1(String packetRootFolder) throws Exception {
+	private LinkedList<String> updateHashSequence1(Path packetRootFolder) throws Exception {
 		LinkedList<String> sequence = new LinkedList<>();
-		Path metaInfoPath = Path.of(packetRootFolder, PACKET_META_FILENAME);
+		Path metaInfoPath = packetRootFolder.resolve(PACKET_META_FILENAME);
 		JSONObject metaInfo;
 		try (BufferedReader reader = Files.newBufferedReader(metaInfoPath, StandardCharsets.UTF_8)) {
 			metaInfo = new JSONObject(reader.lines().collect(Collectors.joining()));
@@ -998,9 +999,9 @@ public class PacketMakerService {
 		return sequence;
 	}
 
-	private LinkedList<String> updateHashSequence2(String packetRootFolder) throws Exception {
+	private LinkedList<String> updateHashSequence2(Path packetRootFolder) throws Exception {
 		LinkedList<String> sequence = new LinkedList<>();
-		Path metaInfoPath = Path.of(packetRootFolder, PACKET_META_FILENAME);
+		Path metaInfoPath = packetRootFolder.resolve(PACKET_META_FILENAME);
 		JSONObject metaInfo;
 		try (BufferedReader reader = Files.newBufferedReader(metaInfoPath, StandardCharsets.UTF_8)) {
 			metaInfo = new JSONObject(reader.lines().collect(Collectors.joining()));
@@ -1015,7 +1016,7 @@ public class PacketMakerService {
 		return sequence;
 	}
 
-	private void updatePacketDataHash(String packetRootFolder, LinkedList<String> sequence, String fileName,
+	private void updatePacketDataHash(Path packetRootFolder, LinkedList<String> sequence, String fileName,
 			String contextKey) throws Exception {
 		MessageDigest messageDigest = MessageDigest.getInstance("SHA-256");
 		ByteArrayOutputStream out = new ByteArrayOutputStream();
@@ -1031,69 +1032,83 @@ public class PacketMakerService {
 			logger.info("sequence packetDataHash >> {} ", packetDataHash);
 			logger.info("sequence packetDataHash2 >> {} ", packetDataHash2);
 		}
-		CommonUtil.write(Path.of(packetRootFolder, fileName), packetDataHash2.getBytes());
+		CommonUtil.write(packetRootFolder.resolve(fileName), packetDataHash2.getBytes());
 	}
 
-	private List<String> getBiometricFiles(String packetRootFolder) {
+	private Path resolvePacketRootFolder(String packetRootFolder, String contextKey) throws IOException {
+		Path allowedBaseDirectory = resolvePacketBaseDirectory(contextKey);
+		Path normalizedPacketFolder = Paths.get(packetRootFolder)
+				.toAbsolutePath()
+				.normalize();
 
-		List<String> paths = new ArrayList<>();
-
-		try {
-
-			File packetFolder = new File(packetRootFolder).getCanonicalFile();
-
-			// Validate directory
-			if (!packetFolder.exists() || !packetFolder.isDirectory()) {
-				return paths;
-			}
-
-			File[] biometricFiles = packetFolder.listFiles(
-					(dir, name) -> name != null && name.endsWith(".xml"));
-
-			if (biometricFiles == null) {
-				return paths;
-			}
-
-			for (File file : biometricFiles) {
-
-				File canonicalFile = file.getCanonicalFile();
-
-				// Ensure file stays inside base directory
-				if (!canonicalFile.getPath()
-						.startsWith(packetFolder.getPath())) {
-
-					throw new SecurityException(
-							"Invalid file path: " + canonicalFile);
-				}
-
-				paths.add(canonicalFile.getAbsolutePath());
-			}
-
-		} catch (IOException e) {
-			throw new RuntimeException(
-					"Error reading biometric files", e);
+		if (!normalizedPacketFolder.startsWith(allowedBaseDirectory)) {
+			throw new SecurityException("Invalid packet folder path: " + normalizedPacketFolder);
 		}
 
-		return paths;
+		if (!Files.isDirectory(normalizedPacketFolder)) {
+			throw new SecurityException("Packet folder does not exist: " + normalizedPacketFolder);
+		}
+
+		Path canonicalPacketFolder = normalizedPacketFolder.toRealPath();
+		if (!canonicalPacketFolder.startsWith(allowedBaseDirectory)) {
+			throw new SecurityException("Invalid packet folder path: " + canonicalPacketFolder);
+		}
+
+		return canonicalPacketFolder;
+	}
+
+	private Path resolvePacketBaseDirectory(String contextKey) {
+		if (contextKey != null) {
+			Object configuredPacketPath = VariableManager.getVariableValue(contextKey, PACKETPATH);
+			if (configuredPacketPath != null && StringUtils.hasText(configuredPacketPath.toString())) {
+				return Paths.get(configuredPacketPath.toString()).toAbsolutePath().normalize();
+			}
+		}
+		return Paths.get(workDirectory).toAbsolutePath().normalize();
+	}
+
+	private List<String> getBiometricFiles(Path packetRootFolder) {
+		return getPacketFiles(packetRootFolder, path -> path.getFileName().toString().endsWith(".xml"));
 	}
 
 	private List<String> getDemographicDocFiles(String packetRootFolder) {
-		List<String> paths = new ArrayList<>();
-		File packetFolder = Path.of(packetRootFolder).toFile();
-		File[] documents = packetFolder
-				.listFiles((d, name) -> name.endsWith(".pdf") || name.endsWith(".jpg") || name.equals("ID.json"));
-		for (File file : documents) {
-			paths.add(file.getAbsolutePath());
-		}
-		return paths;
+		return getPacketFiles(Paths.get(packetRootFolder).toAbsolutePath().normalize(),
+				path -> {
+					String fileName = path.getFileName().toString();
+					return fileName.endsWith(".pdf") || fileName.endsWith(".jpg") || fileName.equals("ID.json");
+				});
 	}
 
-	private List<String> getOperationsFiles(String packetRootFolder) {
+	private List<String> getDemographicDocFiles(Path packetRootFolder) {
+		return getPacketFiles(packetRootFolder,
+				path -> {
+					String fileName = path.getFileName().toString();
+					return fileName.endsWith(".pdf") || fileName.endsWith(".jpg") || fileName.equals("ID.json");
+				});
+	}
+
+	private List<String> getOperationsFiles(Path packetRootFolder) {
+		return getPacketFiles(packetRootFolder, path -> path.getFileName().toString().equals("audit.json"));
+	}
+
+	private List<String> getPacketFiles(Path packetRootFolder, DirectoryStream.Filter<Path> filter) {
 		List<String> paths = new ArrayList<>();
-		File packetFolder = Path.of(packetRootFolder).toFile();
-		File[] documents = packetFolder.listFiles((d, name) -> name.equals("audit.json"));
-		for (File file : documents) {
-			paths.add(file.getAbsolutePath());
+		if (!Files.isDirectory(packetRootFolder)) {
+			return paths;
+		}
+
+		try (DirectoryStream<Path> files = Files.newDirectoryStream(packetRootFolder, filter)) {
+			for (Path file : files) {
+				Path canonicalFile = file.toRealPath();
+				if (!canonicalFile.startsWith(packetRootFolder)) {
+					throw new SecurityException("Invalid file path: " + canonicalFile);
+				}
+				if (Files.isRegularFile(canonicalFile)) {
+					paths.add(canonicalFile.toString());
+				}
+			}
+		} catch (IOException e) {
+			throw new RuntimeException("Error reading packet files", e);
 		}
 		return paths;
 	}
